# shooter

./: CMakeLists.txt  README.md
source/: bullet.cpp  config.h  game.cpp  game.h  main.cpp  player.cpp  sprite.cpp
source/game_objects/: movable_game_object.h  player.cpp  player.h
source/graphics/: texture.cpp  texture.h  texture_model.cpp  texture_model.h
source/headers/: bullet.h  config.h  game.h  player.h  sprite.h
source/input/: input_handler.cpp  input_handler.h  input_type.h
source/input/command/: attack_command.h  command.h  speed_down_command.h  speed_up_command.h  turn_left_command .h  turn_right_command.h
source/scenes/: game_scene.cpp  game_scene.h  scene.h  scene_handler.cpp  scene_handler.h  scene_id.h
